--- a/data/Changelog.txt
+++ b/data/Changelog.txt
@@ -1,28 +1,59 @@
+v.1.2.4.4 от 22.09.2025 (тестовая)
+1. Реализован новый интерфейс в формах отчётности 1.
+2. Реализованы функции переключения между соседними отчётами, а также открытия выбранного отчёта, без перехода в главное окно программы. Т.е. отчёты можно "листать" в рамках одной формы.
+3. Проверять категорию теперь можно непосрественно из формы 1.1, нажав на нужную строчку ПКМ и выбрав в контекстном меню "рассчитать категорию".
+4. Исправления в калькуляторе активности и калькуляторе категории.
+5. Исправления ошибок в проверках форм 1.
+6. Реализованы проверки форм 2.3 - 2.11. Проверки форм 2.1, 2.2 вернулись после тестирования.
+7. Множество исправлений различных замечаний.
+8. В окне провеки форм теперь всегда корректно отображается цвет ошибки (критическая или нет). Также исправлена сортировка, теперь можно удобно сортировать по номеру строки или номеру графы.
+9. Исправления в функции перевода источника из РВ в РАО по коду 41. (через контекстное меню по нужной строчке или всех источников разом отдельной кнопкой).
+10. Исправление импорта из Excel. Теперь, даже если пользователь перепутал порядок нумерации строк в отчёте в Excel, в программу строчки будут грузится с корректными номерами 
+(номера будут выставлены по возрастанию).
+
+v.1.2.4.3 от 14.08.2025
+1. Исправления в функции выгрузки СНК по форме 1.3.
+2. Подготовка к внедрению нового интерфейса для форм 1.
+3. Исправления в проферках форм 1.1.
+4. Исправления различных ошибок и замечений.
+
+v.1.2.4.2 от 28.07.2025
+1. Функции "СНК на дату", "Проверка последней инвентаризации", "Автозамена", "проверка форм 2.1, 2.2" временно убраны до окончания их тестирования.
+2. Исправления в проверке форм 1.6, 1.8.
+3. Исправления различных багов.
+
+v.1.2.4.1 от 26.06.2025
+1. Реализована функция автозаполнения в формах 1.1-1.4 (заполняет определённые графы при определённых кодах операции).
+2. Исправления в функции расчёта категории, касающиеся случаев с несколькими радионуклидами в составе. Другие исправления в интерфейсе.
+3. Исправления в функции пересчёта активности.
+4. Небольшие исправления в функциях проверки форм 1.1-1.6.
+5. Добавлено поле даты изменения отчёта (в программе не отображается, но хранится в базе данных).
+6. Исправление в функции проверки последней инвентаризации.
+7. Изменения и улучшения в всплывающих сообщениях.
+
 v.1.2.4.0 от 15.05.2025
 1. Исправления в проверках форм 1.1, 1.3.
 2. Многочисленные исправления в проверках форм 2.2 по результатам закрытого тестирования.
 3. Доработана функция проверки инвентаризаций форм 1.1 по результатам тестирования, подготовка к релизу подобной выгрузки для форм 1.3.
-4. Доработана выгрузка СНК форм 1.1.
+4. Доработана выгрузки СНК по формам 1.1.
 5. Реализована выгрузка СНК для форм 1.3.
-6. Исправление ошибки с полем ввода даты периода. Ранее с использованием контекстного меню, в поле была возможность вставить некорректные данные.
+6. Исправление ошибки с полем ввода даты периода. Ранее, при использовании контекстного меню, в поле была возможность вставить некорректные данные.
 7. Реализовано сервисное меню, в котором присутствует возможность открытия полезных файлов и папок при работе с программой. Реализовано окно контактов.
 8. В сервисном меню добавлены функции расчёта категории и пересчёта активности.
 9. Исправления в выгрузке списка форм 1 и 2.
-10. Исправление ошибок, при работе из под Linux, связанных с открытием файлов/папок, а также графической частью.
+10. Исправление ошибок, возникающих при работе из под Linux и связанных с открытием файлов/папок, а также с графической частью.
 
 v.1.2.3.20 от 05.03.2025
 1. Изменено выделение ячеек в таблицах. Теперь горизонтальная полоса прокрутки не будет устанавливаться в положение по умолчанию (крайнее левое) при отпускании левой кнопки мыши и при выходе мыши за пределы таблицы. Должно стать удобнее выделять ячейки, если полоса прокрутки находилась не в крайнем левом положении. Работает ещё не идеально, но заметно лучше.
 2. Исправление ошибки, возникающей при выгрузке в .xlsx разрывов и пересечений. Ошибка возникала в случае, если пользователь работал с базой данных, содержащей одновременно отчёты и по форме 1 и по форме 2.
-3. Многочисленные исправления в функциях проверки форм 1.1, 1.2, 1.3, 1.4, 1.6, 1.7, 2.1, 2.2. Для форм 1.1 добавлен справочник наименований упаковок, для которых требуется заполнение формы 1.2. Проверки форм 2.2 в версии, выложенной на сайт, заблокированы, находятся в стадии внутреннего тестирования.
+3. Многочисленные исправления в функциях проверки форм 1.1, 1.2, 1.3, 1.4, 1.6, 1.7, 2.1, 2.2. Для форм 1.1 добавлен справочник наименований упаковок, для которых требуется заполнение формы 1.2.
 4. Исправления во всех выгрузках в .xlsx, касающиеся редко возникающей ошибке при работе с некоторыми файлами БД.
 5. Обновления в работе функции выгрузки списка наличного количества (СНК).
-6. Доработка функции проверки правильности заполнения инвентаризаций, а также нахождения ошибок в отчётности. Данная функция проходит внутреннее тестирование и в версии, выложенной на сайт, недоступна.
-7. Подготовка к внедрений возможности привязки списков к определённым графам отчётов, с возможность как ввести уникальное значение, что будет добавлено в список, так и выбрать из имеющихся.
-8. Исправление в работе программы при запуске с ключом, для автоматизации внутренних процессов. Добавлен ключ для работы с годовой базой.
-9. Добавлена функция очистки при запуске, которая очищает данные форм 1.0 и 2.0 от лишних пробелов и знаков переноса страницы.
-10. Исправление ошибки, возникающей при импорте отчёта в формате .json, при превышении индексом размеров массива.
-11. Исправление ошибки импорта из .xlsx отчётов по форме 1.2. Ранее при данном импорте, в графу 10 (НСС) помещались значения из графы 1 (порядковый номер).
-12. Для удобства, в базовые выгрузки в .xlsx в первых формах добавлена в самый конец графа "Текст статуса РАО", расшифровывающая соответствующее цифровое значение.
+6. Подготовка к внедрению возможности привязки списков к определённым графам отчётов, с возможностью как ввести уникальное значение, что будет добавлено в список, так и выбрать из имеющихся.
+7. Добавлена функция очистки при запуске, которая очищает данные форм 1.0 и 2.0 от лишних пробелов и знаков переноса страницы.
+8. Исправление ошибки, возникающей при импорте отчёта в формате .json, при превышении индексом размеров массива.
+9. Исправление ошибки импорта из .xlsx отчётов по форме 1.2. Ранее при данном импорте в графу 10 (НСС) помещались значения из графы 1 (порядковый номер).
+10. Для удобства, в базовые выгрузки в .xlsx в первых формах добавлена в самый конец графа "Текст статуса РАО", расшифровывающая соответствующее цифровое значение.
 
 
 v.1.2.3.19 от 29.01.2025
