fix bug with form 1.0 & 2.0

--- a/data/Changelog.txt
+++ b/data/Changelog.txt
@@ -1,4 +1,7 @@
-v.1.3.0.0 от 14.11.2025
+v.1.3.0.1 от 16.12.2025
+1. Исправление ошибки с изменением данных в формах 1.0 и 2.0.
+
+v.1.3.0.0 от 15.12.2025
 1. Добавлены проверки форм 2.3 - 2.11.
 2. Исправления в работе функций расчёта СНК, проверок инвентаризаций и проверки последней инвентаризации по пришедшим замечаниям.
 3. Исправления в калькуляторе категории. Теперь есть возможность вводить активность как раздельно для нуклидов, так и общую. 
