--- a/data/Changelog.txt
+++ b/data/Changelog.txt
@@ -1,3 +1,7 @@
+v.1.3.0.2 от 29.12.2025
+1. Исправлена проверка формы 1.6, теперь радионуклиды, содержащие пробел (например уран естественный), корректно сравниваются со значениями из справочника.
+2. Обновлён справочник радионуклидов, для урана естественного добавлен период полураспада.
+
 v.1.3.0.1 от 16.12.2025
 1. Исправление ошибки с изменением данных в формах 1.0 и 2.0.
 
